# neuro-os

./: .gitignore  .gitmodules  CHANGELOG.md  COMMIT_SUMMARY.txt  IMPROVEMENTS.md  QUICKSTART.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt
backups/configs_2025-10-21T05-56-02/: relay_authentication.yaml
neuro-desktop/: __main__.py
neuro-desktop/src/admin/: dashboard.py
neuro-desktop/src/admin/templates/: config_editor.html  dashboard.html  neuro_control.html  plugins.html
neuro-desktop/src/config/: plugins.yaml
neuro-desktop/src/dev/: __init__.py  config.yaml
neuro-desktop/src/dev/admin/: config-manager.js
neuro-desktop/src/dev/integration/: __init__.py  client.py
neuro-desktop/src/dev/integration/Actions/: click.py  dragto.py  get_more_windows.py  keydown.py  refresh_context.py  screenshot.py
neuro-desktop/src/dev/integration/regionalization/: __init__.py  core.py  ocr_detector.py
neuro-desktop/src/dev/utils/: configmanager.py
neuro-desktop/src/plugins/: __init__.py  plugin_manager.py
neuro-desktop/src/plugins/example-plugin/: main.py  plugin.json
neuro-desktop/src/resources/: authentication.yaml  neuro_control.yaml
neuro-desktop/src/tests/: TEST_SUITE_README.md  smoke_test.py  test_action_schemas.py  test_advanced_randy.py  test_integration_client.py  test_neuro_types.py  test_ocr_detector.py  test_pagination.py  test_randy_actions.py  test_regionalization.py  test_vision_api_client.py
neuro-desktop/src/types/: neuro_types.py
neuro-desktop/tests/: README.md  conftest.py  test_neuro_control_api.py  test_plugin_manager_unit.py  test_plugins_api.py
src/admin/: dashboard.py
src/admin/templates/: dashboard.html  traffic_dashboard.html
src/dev/: config.yaml  launch.py
src/dev/backend/winapi/: interaction-server.py
src/dev/interaction-client/: __main__.py  client.py
src/dev/neuro-client/: __main__.py
src/dev/neuro-client/Actions/: click.py
src/dev/neuro-initialization/: __main__.py
src/dev/neuro-initialization/Actions/: click.py
src/dev/neuro_integration/: __init__.py  client.py  relay_manager.py
src/dev/neuro_integration/Actions/: click.py  dragrel.py  dragto.py  get_more_text.py  hotkey.py  keyup.py  move.py  press.py
src/dev/utils/: loadConfig.py  winapi_management.py
src/dev/windows-api/src/resources/gui/config/: authentication.yaml
src/global/: packages.yaml
src/regionalization/: core.py  vision_api_client.py
src/resources/: relay_auth.yaml
src/tests/: smoke_test.py  test_pagination.py  test_randy_integration.py
src/types/: __init__.py  neuro_types.py
